// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-responsive-table/Custom class-name Cells 1`] = `
<div
  class="m-auto-horizontal-scroll m-responsive-table m--is-gradient-style-white"
>
  <!---->
   
  <!---->
   
  <div
    class="m-auto-horizontal-scroll__body"
  >
    <div
      class="m-auto-horizontal-scroll__body-content"
      style="min-width: 100%;"
    >
      <table
        cellspacing="0"
        class="m-responsive-table__table"
        id="idTable"
      >
        <thead
          class="m-table-head m--is-head-style-light"
        >
          <tr>
            <th
              class="m--is-sorted m--is-text-align-left"
              id="name-idTable"
              scope="col"
            >
              <div>
                Name
              </div>
            </th>
            <th
              class="m--is-text-align-center"
              id="id-idTable"
              scope="col"
            >
              <div>
                Id
              </div>
            </th>
            <th
              class="m--is-text-align-left"
              id="email-idTable"
              scope="col"
            >
              <div>
                Email
              </div>
            </th>
            <th
              class="m--is-text-align-left"
              id="dateOfBirth-idTable"
              scope="col"
            >
              <div>
                Date of birth
              </div>
            </th>
            <th
              class="m--is-text-align-left"
              id="phoneNumber-idTable"
              scope="col"
            >
              <div>
                Phone number
              </div>
            </th>
          </tr>
        </thead>
         
        <!---->
         
        <tr
          aria-hidden="true"
          class="m-responsive-table__spacing-top-rows-group-area"
          style="height: 2px;"
        >
          <td
            class="m-responsive-table__spacing-top-rows-group"
            style="height: 2px; width: 100%; left: 0px;"
          />
        </tr>
         
        <tbody
          class="m-table-group m--no-header m--has-row-highlighted-on-hover m--is-rows-style-borders"
        >
          <!---->
           
          <tr>
            <th
              class="m-table-group__cell m--is-text-align-left add-custom-class-cell"
              scope="row"
            >
              
                                    Vincent Guilmette
                                
            </th>
            <td
              class="m-table-group__cell m--is-text-align-center test-cell-custom-class-name"
            >
              
                                    111 222 333
                                
            </td>
            <td
              class="m-table-group__cell m--is-text-align-left"
            >
              
                                    vincent.gui@gmail.com
                                
            </td>
            <td
              class="m-table-group__cell m--is-text-align-left"
            >
              
                                    1976-12-05
                                
            </td>
            <td
              class="m-table-group__cell m--is-text-align-left"
            >
              
                                    819 232-3754
                                
            </td>
          </tr>
           
          <!---->
        </tbody>
         
        <!---->
      </table>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-responsive-table/Custom class-name Group Header 1`] = `
<div
  class="m-auto-horizontal-scroll m-responsive-table m--is-gradient-style-white"
>
  <!---->
   
  <!---->
   
  <div
    class="m-auto-horizontal-scroll__body"
  >
    <div
      class="m-auto-horizontal-scroll__body-content"
      style="min-width: 100%;"
    >
      <table
        cellspacing="0"
        class="m-responsive-table__table"
        id="idTable"
      >
        <thead
          class="m-table-head m--is-head-style-light"
        >
          <tr>
            <th
              class="m--is-sorted m--is-text-align-left"
              id="name-idTable"
              scope="col"
            >
              <div>
                Name
              </div>
            </th>
            <th
              class="m--is-text-align-center"
              id="id-idTable"
              scope="col"
            >
              <div>
                Id
              </div>
            </th>
            <th
              class="m--is-text-align-left"
              id="email-idTable"
              scope="col"
            >
              <div>
                Email
              </div>
            </th>
            <th
              class="m--is-text-align-left"
              id="dateOfBirth-idTable"
              scope="col"
            >
              <div>
                Date of birth
              </div>
            </th>
            <th
              class="m--is-text-align-left"
              id="phoneNumber-idTable"
              scope="col"
            >
              <div>
                Phone number
              </div>
            </th>
          </tr>
        </thead>
         
        <!---->
         
        <!---->
         
        <tbody
          class="m-table-group m--has-header m--has-row-highlighted-on-hover m--is-rows-style-borders"
        >
          <tr
            class="m-table-group-header m-table-group__header m--has-accordion m--is-accordion-icon-position-left m--is-group-header-style-any test-group-header-custom-class-name"
            tabindex="0"
          >
            <th
              class="m--is-text-align-left"
              colspan="5"
            >
              <div
                class="m-table-group-header__cell"
                style="width: 100%;"
              >
                <span
                  class="m-plus m-table-group-header__accordion-icon m--is-skin-current-color m--is-open m--is-large test-icon-accordion-custom-class-name"
                />
                 
                <div
                  class="m-table-group-header__content-cell"
                >
                  <div>
                    Group #1
                  </div>
                </div>
              </div>
            </th>
          </tr>
           
          <tr>
            <th
              class="m-table-group__cell m--is-text-align-left add-custom-class-cell"
              scope="row"
            >
              
                                    Name 1
                                
            </th>
            <td
              class="m-table-group__cell m--is-text-align-center"
            >
              
                                    111 222 333
                                
            </td>
            <td
              class="m-table-group__cell m--is-text-align-left"
            >
              
                                    fake1@email.com
                                
            </td>
            <td
              class="m-table-group__cell m--is-text-align-left"
            >
              
                                    1971-12-05
                                
            </td>
            <td
              class="m-table-group__cell m--is-text-align-left"
            >
              
                                    819 555-0111
                                
            </td>
          </tr>
          <tr>
            <th
              class="m-table-group__cell m--is-text-align-left"
              scope="row"
            >
              
                                    Name 2
                                
            </th>
            <td
              class="m-table-group__cell m--is-text-align-center"
            >
              
                                    111 322 344
                                
            </td>
            <td
              class="m-table-group__cell m--is-text-align-left"
            >
              
                                    fake2@email.com
                                
            </td>
            <td
              class="m-table-group__cell m--is-text-align-left"
            >
              
                                    1980-06-11
                                
            </td>
            <td
              class="m-table-group__cell m--is-text-align-left"
            >
              
                                    418 555-0163
                                
            </td>
          </tr>
          <tr>
            <th
              class="m-table-group__cell m--is-text-align-left"
              scope="row"
            >
              
                                    Name 3
                                
            </th>
            <td
              class="m-table-group__cell m--is-text-align-center"
            >
              
                                    112 528 967
                                
            </td>
            <td
              class="m-table-group__cell m--is-text-align-left"
            >
              
                                    fake3@email.com
                                
            </td>
            <td
              class="m-table-group__cell m--is-text-align-left"
            >
              
                                    1970-04-08
                                
            </td>
            <td
              class="m-table-group__cell m--is-text-align-left"
            >
              
                                    438 555-0113
                                
            </td>
          </tr>
           
          <!---->
        </tbody>
         
        <!---->
      </table>
    </div>
  </div>
</div>
`;
